cmake_minimum_required(VERSION 2.8)
project( CMatcher )
find_package( OpenCV REQUIRED )
find_package( raspicam  )
add_executable( CMatcher CMatcher.cpp )
target_link_libraries( CMatcher ${OpenCV_LIBS} )
IF  ( raspicam_CV_FOUND )
	add_executable( CMatcher_RaspiCam CMatcher_RaspiCam.cpp )
	target_link_libraries( CMatcher_RaspiCam ${OpenCV_LIBS} )
	target_link_libraries (CMatcher_RaspiCam ${raspicam_CV_LIBS} )
ENDIF()